[project]
name = "advent-of-code-25"
version = "0.1.0"
description = ""
authors = [
    {name = "Ben Jones",email = "benjones1479@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
